--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 body{
     background-color: #4c586d;
  color: white;
+ display: flex;
+ justify-content:space-around;
+ align-items: center;
+ padding: 24px;
 }   
 
 .cabecalho_image{
     width: 20%;
 }
 
-    
+cabecalho-lista-item{
+    display: inline-block;
+}
